test/semantic_errors/invalid_declaration7.mc
bool isBoolean() {
    return true;
}

void main() {
    int b = isBoolean(); /* assignment of bool to int */
}